# mcp-video-gen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
docs/maintenance/: 2026-06-27-provider-model-catalog.md
docs/superpowers/plans/: 2026-03-23-veo-provider-integration.md
src/video_gen/: __init__.py  server.py
src/video_gen/audio/: __init__.py  google_lyria.py  google_stt.py  google_tts.py  minimax_music.py  minimax_tts.py
src/video_gen/providers/: __init__.py  ark.py  cogvideo.py  dashscope.py  kling.py  minimax.py  siliconflow.py  veo.py  vidu.py
tests/: test_download_security.py  test_mcp_contract.py
