[project]
name = "mcp-video-gen"
version = "1.2.0"
description = "MCP server for AI video, speech, music & transcription with multiple providers. Video: CogVideoX, DashScope, Kling, SiliconFlow, Vidu, MiniMax, Google Veo. Audio: MiniMax + Google Lyria/TTS/STT."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mcp>=1.1.2",
    "PyJWT>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_gen"]

[project.optional-dependencies]
gcp = ["google-auth>=2.20.0", "requests>=2.20.0"]

[project.scripts]
video-gen = "video_gen:main"
